# fdpbd-analysis

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  presentation.md
backend/: main.py  pyproject.toml
backend/app/: config.py  dependencies.py
backend/app/core/anisotropic/: analysis.py
backend/app/core/isotropic/: analysis.py  fitting.py  thermal_model.py
backend/app/core/shared/: data_processing.py  fitting.py  fitting_de.py  integration.py
backend/app/core/transverse/: analysis.py
backend/app/models/: anisotropic.py  fitting.py  isotropic.py  transverse_isotropic.py
backend/app/routers/: analysis.py
backend/app/services/: analysis_service.py
backend/tests/: conftest.py
backend/tests/fixtures/: generate_sample_data.py
backend/tests/unit/: test_data_processing.py  test_integration.py  test_thermal_model.py
data/: sample.txt
frontend/: eslint.config.js  index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/lib/: unitConversions.test.ts  validation.test.ts
frontend/src/__tests__/schemas/: results.test.ts
frontend/src/api/: analysis.ts  client.ts  fitting.ts
frontend/src/components/form/: AccordionSection.tsx  ActionBar.tsx  AnalysisModeSelector.tsx  FileUpload.tsx  FitConfigForm.tsx  ForwardModelForm.tsx  ParamInput.tsx  PresetRadioGroup.tsx  TabBar.tsx
frontend/src/components/form/sections/: AnisotropicSampleSection.tsx  InterfaceSection.tsx  LaserSection.tsx  LensSection.tsx  MediumSection.tsx  SampleSection.tsx  TransducerElasticSection.tsx  TransducerSection.tsx  TransverseDetectionSection.tsx
frontend/src/components/layout/: AppHeader.tsx
frontend/src/components/results/: FittingProgress.tsx  PlotPanel.tsx  ResultsSummary.tsx
frontend/src/components/results/charts/: InOutPhasePlot.tsx  Plot.tsx  RatioPlot.tsx
frontend/src/components/ui/: Button.tsx  Icons.tsx  InfoTooltip.tsx  ToggleGroup.tsx
frontend/src/constants/: defaults.ts  presets.ts  theme.ts  units.ts
frontend/src/hooks/: useAnalysis.ts  useFitting.ts  useTheme.ts
frontend/src/lib/: unitConversions.ts  validation.ts
frontend/src/schemas/: params.ts  results.ts
frontend/src/state/: analysisReducer.ts  formReducer.ts
